# nfstrace

./: .clang-format  .gitignore  .travis.yml  .tsan_suppressions.txt  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README  README.md  astyle.cfg  config.mk  index.html  load_tests  nfs.h  nfstrace.cpp  params.json  struct.txt  tcp_ip_headers.h
analyzers/: CMakeLists.txt  Makefile  breakdown.plt  breakdown_nfsv3.plt  breakdown_nfsv4.plt  config.mk  nst.sh
analyzers/src/breakdown/: CMakeLists.txt  analyzer.cpp  breakdown.h  breakdown_analyzer.cpp  breakdown_analyzer.h  breakdowncounter.cpp  breakdowncounter.h  cifsv1breakdownanalyzer.cpp  cifsv1breakdownanalyzer.h  cifsv1commands.cpp  cifsv1commands.h  cifsv2breakdownanalyzer.cpp  cifsv2breakdownanalyzer.h  cifsv2commands.cpp  cifsv2commands.h  commandrepresenter.h  latencies.cpp  latencies.h  nfsv3breakdownanalyzer.cpp  nfsv3breakdownanalyzer.h  nfsv3commands.cpp  nfsv3commands.h  nfsv41breakdownanalyzer.cpp  nfsv41breakdownanalyzer.h  nfsv41commands.h  nfsv4breakdownanalyzer.cpp  nfsv4breakdownanalyzer.h  nfsv4commands.cpp  nfsv4commands.h  nfsv4representer.cpp  nfsv4representer.h  representer.cpp  representer.h  statistic.cpp  statistic.h  statistics.cpp  statistics.h  statisticscompositor.cpp  statisticscompositor.h
analyzers/src/cifs/: CMakeLists.txt  breakdowncounter.cpp  breakdowncounter.h  cifs2_commands.cpp  cifs2_commands.h  cifs_analyzer.cpp  cifs_commands.cpp  cifs_commands.h  cifs_representer.cpp  cifs_representer.h  cifsbreakdownanalyzer.cpp  cifsbreakdownanalyzer.h  cifsv1breakdownanalyzer.cpp  cifsv1breakdownanalyzer.h  cifsv1commands.cpp  cifsv1commands.h  cifsv2breakdownanalyzer.cpp  cifsv2breakdownanalyzer.h  cifsv2commands.cpp  cifsv2commands.h  commandrepresenter.h  latencies.cpp  latencies.h  nfsv3breakdownanalyzer.cpp  nfsv3breakdownanalyzer.h  nfsv3commands.cpp  nfsv3commands.h  nfsv41breakdownanalyzer.cpp  nfsv41breakdownanalyzer.h  nfsv41commands.cpp  nfsv41commands.h  nfsv4breakdownanalyzer.cpp  nfsv4breakdownanalyzer.h  nfsv4commands.cpp  nfsv4commands.h  onlinevariance.cpp  onlinevariance.h  representer.cpp  representer.h  statistic.cpp  (+1 more)
analyzers/src/json/: CMakeLists.txt  abstract_tcp_service.cpp  abstract_tcp_service.h  ip_endpoint.cpp  ip_endpoint.h  json_analyzer.cpp  json_analyzer.h  json_plugin.cpp  json_tcp_service.cpp  json_tcp_service.cxx  json_tcp_service.h
analyzers/src/ofdws/: file_rw_op.cpp  file_rw_op.h  ofdws_analyzer.cpp  ofdws_analyzer.h
analyzers/src/ofws/: ofws_analyzer.cpp  ofws_analyzer.h
analyzers/src/test/: test_analyzer.cpp
analyzers/src/utils/: fh.cpp  fh.h  plugin_api_struct.cpp  plugin_api_struct.h
analyzers/src/watch/: CMakeLists.txt  Doxyfile  UserGUI.cpp  UserGUI.h  WatchAnalyzer.cpp  WatchAnalyzer.h  nc_windows.cpp  nc_windows.h  plotter.cpp  plotter.h  protocols.cpp  protocols.h  user_gui.cpp  user_gui.h  watch_analyzer.cpp  watch_analyzer.h
analyzers/src/watch/nc_windows/: header_window.cpp  header_window.h  main_window.cpp  main_window.h  nc_window_const.h  statistics_window.cpp  statistics_window.h
analyzers/src/watch/protocols/: abstract_protocol.cpp  abstract_protocol.h  cifsv1_protocol.cpp  cifsv1_protocol.h  cifsv2_commands.cpp  cifsv2_commands.h  cifsv2_protocol.cpp  cifsv2_protocol.h  commandrepresenter.h  nfsv3_protocol.cpp  nfsv3_protocol.h  nfsv41_protocol.cpp  nfsv41_protocol.h  nfsv4_protocol.cpp  nfsv4_protocol.h
analyzers/src/webui/: CMakeLists.txt  json_tcp_service.cxx  json_tcp_service.h  webui_analyzer.cpp  webui_analyzer.h  webui_plugin.cpp
ci/: ci_build.sh
cmake/: FindJSON.cmake  codeformat.cmake  options.cmake  packaging.cmake  valgrind.cmake
dockerfiles/: Dockerfile.ubuntu1404
docs/: CMakeLists.txt  HOWTO  NFSTRACE.Releasenotes.docx  TODO  analyzer_specification.odt  callgrind.out.nfstrace  coding-standard  graphics.vsdx  nfstrace.8  nfstrace.8.in  nfstrace_manual.docx  nfstrace_manual.tex  statistic.txt  template.cpp  template.h  test_guide.txt
docs/design/: CMakeLists.txt  download_plantuml.cmake
docs/design/libwatch/: CMakeLists.txt  class_diagram.plantuml  class_diagram.txt  download_plantuml.sh  generate.sh
docs/man/: nfstrace.8  nfstrace.8.in
docs/nfstrace_manual_includes/: breakdown_output.txt  libwatch_output.txt  telnet_output.txt
scripts/: all-proc.py  files.py  write-file.py
src/: main.cpp
tests/: CMakeLists.txt  Makefile
tests/block_allocation_manager/: Makefile  main.cpp
tests/block_allocator/: Makefile  block_allocator.cpp
tests/discardc/: Makefile  discardc.cpp  headers.h  load_tests.py
tests/fifo/: Makefile  fifo_usage.cpp
tests/fill_queue/: Makefile  fill_queue.cpp
tests/functional/: CMakeLists.txt  check-command.sh.in  check-compressed-drane.sh.in  check-compressed-trace.sh.in  check-output.sh.in  tests.cmake
tests/functional/block_allocator/: block_allocator.cpp
tests/functional/json-analyzer/: CMakeLists.txt  check-json-analyzer.py.in  create_trace.sh  reference.json  trace.pcap.bz2
tests/functional/json-service/: CMakeLists.txt  check-json-service.py.in
tests/functional/pcap_if/: pcap_if.cpp
tests/pcap_if/: Makefile  pcap_if.cpp
tests/reader/: Makefile  main.cpp  test.dmp
tests/tcp_sessions/: Makefile  tcp_sessions.cpp
tests/test_plugin/: Makefile  main.cpp  plugin_api.h  test_analyzer.cpp  test_analyzer.h
tests/thread/: Makefile  main.cpp
tests/unit/: CMakeLists.txt  profiler.h
tests/unit/analyzers/: CMakeLists.txt  cifs.cpp
tests/unit/analyzers/breakdown/: CMakeLists.txt  breakdown.cpp  latency.cpp  statistic.cpp
tests/unit/analyzers/json/: CMakeLists.txt  ip_endpoint.cpp  tcp_service.cpp  test_json_analyzer.cpp
tests/unit/analyzers/webui/: CMakeLists.txt  test_webui_analyzer.cpp
tests/unit/filtration/: CMakeLists.txt  cifsv2.cpp  stream.cpp
tests/unit/net/: CMakeLists.txt  ip_endpoint.cpp  tcp_endpoint.cpp  tcp_service.cpp  tcp_service.cxx  test_net.cpp
tests/unit/protocols/: CMakeLists.txt  cifsv2.cpp
tests/unit/utils/: CMakeLists.txt  block_allocator.cpp  filtered_data.cpp  test_utils.cpp
tests/xdr/: xdr.cpp
(+380 files in other folders)
